Finish GET /api/appointment get appointments
